--- a/src/uikit-page/colorAndType/colorAndType.pug
+++ b/src/uikit-page/colorAndType/colorAndType.pug
@@ -1,8 +1,8 @@
 doctype html
 html
   head
-    script(src="https://code.jquery.com/jquery-1.12.4.min.js")
-    script(src="https://code.jquery.com/ui/1.12.1/jquery-ui.js")
+    //- script(src="https://code.jquery.com/jquery-1.12.4.min.js")
+    //- script(src="https://code.jquery.com/ui/1.12.1/jquery-ui.js")
     meta(charset = 'utf-8')
     meta(name='viewport', content="initial-scale=1.0, width=device-width")
     title Toxin Hotel
@@ -31,7 +31,7 @@ html
         +colorText('colorText_h2','H2','Next one is the item title inside</br> widgets')   
         +colorText('colorText_h3','H3','This is a label or CTA text')   
         +colorText('colorText_body','Body','This is the body text which is used for most</br> of the design, like paragraphs, lists, etc.') 
-      
+  
            
 
                             
