--- a/src/uikit-page/formElements/formElements.scss
+++ b/src/uikit-page/formElements/formElements.scss
@@ -22,6 +22,13 @@
     &:nth-child(7){
       margin-top: 19px;
     }
+    &:nth-child(8){
+      width: 266px;
+      margin-top: 81px;
+    }
+    &:nth-child(9){
+      width: 266px;
+    }
   }
   &__row-input-text {
     display: flex;
