--- a/src/uikit-page/formElements/formElements.scss
+++ b/src/uikit-page/formElements/formElements.scss
@@ -27,7 +27,13 @@
       margin-top: 81px;
     }
     &:nth-child(9){
-      width: 266px;
+      width: 266px;  
+    }
+    &:nth-child(10){  
+      margin-top: 31px;
+    }
+    &:nth-child(11){  
+      margin-top: 22px;
     }
   }
   &__row-input-text {
