add com textList

--- a/src/uikit-page/formElements/formElements.pug
+++ b/src/uikit-page/formElements/formElements.pug
@@ -71,6 +71,10 @@ html
           div.formElements__row-input-item
             include ../../components/checkboxList/checkboxList.pug
             +checkboxList('checkboxList__items_show','checkboxList__titleBtn_rotate')
+          div.formElements__row-input-item
+            include ../../components/textList/textList.pug
+            +smile()
+            +city()
         div.formElements__row-checkbox
         div.formElements__row-btn
     
