--- a/src/uikit-page/formElements/formElements.scss
+++ b/src/uikit-page/formElements/formElements.scss
@@ -35,6 +35,9 @@
     &:nth-child(11){  
       margin-top: 22px;
     }
+    &:nth-child(12){  
+      margin-top: 74px;
+    }
   }
   &__row-input-text {
     display: flex;
