--- a/src/components/checkboxList/checkboxList.pug
+++ b/src/components/checkboxList/checkboxList.pug
@@ -1,13 +1,13 @@
 mixin checkboxItem(title,flag)
   li.checkboxList__item 
-    label(class='checkboxList__item-check checkboxList__item-check_option') 
+    label(class='checkboxList__item-check') 
             input(type="checkbox" checked=flag class='checkboxList__item-check-input')
             span.checkboxList__item-checkbox
-            span=title
+            div.checkboxList__item-title!=title
 
 mixin checkboxList(show,rotate)
   section.checkboxList
-    button(class='checkboxList__titleBtn '+ rotate) expandable checkbox list
+    button(class='checkboxList__titleBtn '+ rotate id='checkboxListBtn') expandable checkbox list
     ul(class='checkboxList__items '+ show)
       +checkboxItem('Завтрак',false)
       +checkboxItem('Письменный стол',false)
@@ -15,3 +15,11 @@ mixin checkboxList(show,rotate)
       +checkboxItem('Кроватка',true)
       +checkboxItem('Телевизор',false)
       +checkboxItem('Шампунь',false)
+
+mixin checkboxButtons(title)
+  section.checkboxList
+    div.checkboxList__title=title
+    ul(class='checkboxList__items checkboxList__items_show')
+      +checkboxItem('Можно курить',false)
+      +checkboxItem('Можно с питомцами',true)
+      +checkboxItem('Можно пригласить гостей</br> (до 10 человек)',true)
