--- a/src/uikit-page/formElements/formElements.pug
+++ b/src/uikit-page/formElements/formElements.pug
@@ -69,12 +69,13 @@ html
             include ../../components/checkboxList/checkboxList.pug
             +checkboxList()
           div.formElements__row-input-item
-            include ../../components/checkboxList/checkboxList.pug
             +checkboxList('checkboxList__items_show','checkboxList__titleBtn_rotate')
           div.formElements__row-input-item
             include ../../components/textList/textList.pug
             +smile()
             +city()
         div.formElements__row-checkbox
+          div.formElements__row-checkbox-item
+            +checkboxButtons('Checkbox Buttons')
         div.formElements__row-btn
     
