--- a/src/components/radioButtons/radioButtons.scss
+++ b/src/components/radioButtons/radioButtons.scss
@@ -2,6 +2,8 @@
   &__title {
     font-weight: bold;
     margin-bottom: 13px;
+    text-transform: uppercase;
+    font-size: 12px;
   }
   &__radio {
     display: flex;
