add com richCheckBox

--- a/src/uikit-page/formElements/formElements.pug
+++ b/src/uikit-page/formElements/formElements.pug
@@ -93,5 +93,8 @@ html
           div.formElements__row-checkbox-item
             include ../../components/dropDown/dropDown.pug
             +dropDown('dropDown__body_show','dropdown')
+          div.formElements__row-checkbox-item
+            include ../../components/richCheckboxBtn/richCheckboxBtn.pug
+            +richCheckboxBtn('rich Checkbox Buttons','Широкий коридор','Ширина коридоров в номере</br> не менее 91 см.')
         div.formElements__row-btn
     
