--- a/src/uikit-page/formElements/formElements.scss
+++ b/src/uikit-page/formElements/formElements.scss
@@ -78,6 +78,9 @@
     &:nth-child(6){
       margin-top: 189px;
     }
+    &:nth-child(7){
+      margin-top: 101px;
+    }
   }
   &__row-checkbox-item-title{
     text-transform: uppercase;
