add com range-slider

--- a/src/uikit-page/formElements/formElements.pug
+++ b/src/uikit-page/formElements/formElements.pug
@@ -97,4 +97,7 @@ html
             include ../../components/richCheckboxBtn/richCheckboxBtn.pug
             +richCheckboxBtn('rich Checkbox Buttons','Широкий коридор','Ширина коридоров в номере</br> не менее 91 см.')
         div.formElements__row-btn
+          div.formElements__row-btn-item
+            include ../../components/range-slider/range-slider.pug
+            +range-slider('Range Slider')
     
