--- a/src/uikit-page/formElements/formElements.scss
+++ b/src/uikit-page/formElements/formElements.scss
@@ -93,4 +93,23 @@
   &__row-btn {
     margin-left: 73px;
   }
+  &__row-btn-item{
+    width: 320px;
+    margin-bottom: 43px;
+    &:nth-child(2){
+      margin-bottom: 30px;
+    }
+    &:nth-child(3){
+      margin-bottom: 27px;
+    }
+    &:nth-child(4){
+      margin-bottom: 28px;
+    }
+  }
+  &__row-btn-item-title{
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: 12px;
+    margin-bottom: 13px;
+  }
 }
