add com pogination

--- a/src/uikit-page/formElements/formElements.pug
+++ b/src/uikit-page/formElements/formElements.pug
@@ -113,4 +113,7 @@ html
           div.formElements__row-btn-item
             include ../../components/buttons/buttons.pug
             +btnForm('перейти к оплате')
+          div.formElements__row-btn-item
+          include ../../components/pagination/pagination.pug
+          +pagination()
     
