--- a/src/components/likeButton/likeButton.scss
+++ b/src/components/likeButton/likeButton.scss
@@ -1,5 +1,5 @@
 .likeButton {
-  width: 40px;
+  min-width: 40px;
   height: 20px;
   border: 1px solid rgba(31, 32, 65, 0.25);
   border-radius: 10px;
