--- a/src/uikit-page/formElements/formElements.pug
+++ b/src/uikit-page/formElements/formElements.pug
@@ -96,6 +96,9 @@ html
           div.formElements__row-checkbox-item
             include ../../components/richCheckboxBtn/richCheckboxBtn.pug
             +richCheckboxBtn('rich Checkbox Buttons','Широкий коридор','Ширина коридоров в номере</br> не менее 91 см.')
+          div.formElements__row-checkbox-item
+            include ../../components/commentary/commentary.pug
+            +commentary('Мурад Сарафанов','5 дней назад','Великолепный матрас на кровати в основной спальне! А пуфик вообще потрясающий. И стены, действительно, шумоподавляющие. Выкрикивал комплименты повару — никто не жаловался из соседей.')
         div.formElements__row-btn
           div.formElements__row-btn-item
             include ../../components/range-slider/range-slider.pug
@@ -114,6 +117,14 @@ html
             include ../../components/buttons/buttons.pug
             +btnForm('перейти к оплате')
           div.formElements__row-btn-item
-          include ../../components/pagination/pagination.pug
-          +pagination()
+            div.formElements__row-btn-item-title pagination
+            include ../../components/pagination/pagination.pug
+            +pagination()
+          div.formElements__row-btn-item
+            include ../../components/dropDown/dropDown.pug
+            +dropDown('dropDown__body_show','dropdown') 
+          div.formElements__row-btn-item
+            div.formElements__row-btn-item-title bullet list
+            include ../../components/bulletList/bulletList.pug
+            +bulletList('') 
     
