--- a/src/uikit-page/formElements/formElements.scss
+++ b/src/uikit-page/formElements/formElements.scss
@@ -59,6 +59,7 @@
 
   &__row-checkbox {
     margin-left: 126px;
+    position: relative;
   }
  
   &__row-checkbox-item{
@@ -79,6 +80,10 @@
     }
     &:nth-child(7){
       margin-top: 101px;
+    }
+    &:nth-child(8){
+      position: absolute;
+      bottom: 37px;
     }
   }
   &__row-checkbox-item-title{
@@ -105,11 +110,20 @@
     &:nth-child(4){
       margin-bottom: 28px;
     }
+    &:nth-child(7){
+      margin-top: 229px;
+    }
+    &:nth-child(8){
+      margin-top: 101px;
+    }
   }
   &__row-btn-item-title{
     text-transform: uppercase;
     font-weight: bold;
     font-size: 12px;
     margin-bottom: 13px;
+    &:nth-child(8){
+      margin-top: 101px;
+    }
   }
 }
