--- a/src/components/buttons/buttons.scss
+++ b/src/components/buttons/buttons.scss
@@ -17,6 +17,8 @@
   padding: 11px 20px 11px 16px;
   font-size: 12px;
   border: 1px solid #bc9cff;
+  text-transform: uppercase;
+  width: 99px;
   &:focus,
   &:active {
     opacity: 0.5;
