--- a/src/uikit-page/cards/cards.scss
+++ b/src/uikit-page/cards/cards.scss
@@ -2,5 +2,18 @@
   max-width: 1440px; 
   padding: 150px 140px 140px 140px;
   background: #E5E5E5 url('../../img/main-logo.svg')no-repeat 30px 30px;
-  
+  display: flex;
+  &__left-colum{
+    display: flex;
+    flex-direction: column;
+  }
+  &__left-colum-item{
+    margin-bottom: 40px;
+  }
+  &__centre-colum{
+
+  }
+  &__right-colum{
+
+  }
 }
