add com formToBook

--- a/src/uikit-page/cards/cards.pug
+++ b/src/uikit-page/cards/cards.pug
@@ -24,4 +24,7 @@ html
           include ../../components/accountRegistration/accountRegistration.pug
           +accountRegistration('Регистрация аккаунта')
       div.cards__centre-colum
+        div.cards__centre-colum-item
+          include ../../components/formToBook/formToBook.pug
+          +formToBook()
       div.cards__right-colum
