--- a/src/uikit-page/cards/cards.pug
+++ b/src/uikit-page/cards/cards.pug
@@ -27,4 +27,7 @@ html
         div.cards__centre-colum-item
           include ../../components/formToBook/formToBook.pug
           +formToBook()
+        div.cards__centre-colum-item
+          include ../../components/signIn/signIn.pug
+          +signIn()
       div.cards__right-colum
