--- a/src/uikit-page/formElements/formElements.pug
+++ b/src/uikit-page/formElements/formElements.pug
@@ -91,7 +91,7 @@ html
           div.formElements__row-checkbox-item
             div.formElements__row-checkbox-item-title rate button
             include ../../components/rateBtn/rateBtn.pug
-            +rateBtn()
+            +rateBtn('4')
           div.formElements__row-checkbox-item
             include ../../components/dropDown/dropDown.pug
             +dropDown('dropDown__body_show','dropdown')
