--- a/src/components/rateBtn/rateBtn.pug
+++ b/src/components/rateBtn/rateBtn.pug
@@ -1,5 +1,5 @@
-mixin rateBtn()
-  div(class='rating' data-total-value='4')
+mixin rateBtn(number)
+  div(class='rating' data-total-value=number)
     div(class='rating__item' data-item-value='5') 
     div(class='rating__item' data-item-value='4') 
     div(class='rating__item' data-item-value='3') 
