--- a/src/uikit-page/cards/cards.pug
+++ b/src/uikit-page/cards/cards.pug
@@ -3,6 +3,9 @@ html
   head
     script(src="https://code.jquery.com/jquery-1.12.4.min.js")
     script(src="https://code.jquery.com/ui/1.12.1/jquery-ui.js")
+    link(rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css")
+    
+    script(type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js")
     meta(charset = 'utf-8')
     meta(name='viewport', content="initial-scale=1.0, width=device-width")
     title Toxin Hotel
@@ -31,3 +34,29 @@ html
           include ../../components/signIn/signIn.pug
           +signIn()
       div.cards__right-colum
+        div.cards__right-colum-item
+          include ../../components/calendar/calendar.pug
+          +calendar()
+        div.cards__right-colum-item
+          include ../../components/slide/slide.pug
+          +slide(
+            ['../../img/photo/image-1.png',
+            '../../img/photo/image-2.png',
+            '../../img/photo/image-3.png',
+            '../../img/photo/image-4.png'],
+            888,
+            '9 990₽',
+            5,
+            145)
+        div.cards__right-colum-item
+          include ../../components/slide/slide.pug
+          +slide(
+            ['../../img/photo/image-5.png',
+            '../../img/photo/image-6.png',
+            '../../img/photo/image-7.png',
+            '../../img/photo/image-8.png'],
+            840,
+            '9 990₽',
+            4,
+            65)
+        
