--- a/src/uikit-page/cards/cards.scss
+++ b/src/uikit-page/cards/cards.scss
@@ -1,22 +1,26 @@
-.cards{
-  max-width: 1440px; 
+.cards {
+  max-width: 1440px;
   padding: 150px 140px 140px 140px;
-  background: #E5E5E5 url('../../img/main-logo.svg')no-repeat 30px 30px;
+  background: #e5e5e5 url("../../img/main-logo.svg") no-repeat 30px 30px;
   display: flex;
-  &__left-colum{
+  &__left-colum {
     display: flex;
     flex-direction: column;
   }
   &__left-colum-item{
-    margin-bottom: 40px;
+    margin-bottom: 38px;
   }
-  &__centre-colum{
-    margin-left: 40px;
-  }
-  &__centre-colum-item{
-   margin-bottom: 40px;
-  }
-  &__right-colum{
 
+  &__centre-colum {
+    margin-left: 40px;
+    margin-right: 40px;
   }
+  &__centre-colum-item {
+    margin-bottom: 38px;
+  }
+  &__right-colum {
+  }
+}
+.cards__right-colum-item {
+  margin-bottom: 40px;
 }
