--- a/src/components/head/head.pug
+++ b/src/components/head/head.pug
@@ -1,22 +1,26 @@
 include ../buttons/buttons.pug
 
-mixin head()
+mixin headItem(text,className,flag)
+  li(class='head__link '+className)
+    a=text
+    if(flag)
+      button.head__link_downBtn 
+
+mixin head(name)
+  - var className=name ? 'head__item_name':''
+
   section.head
-    section.head__item
+    div(class='head__item '+className)
       ul.head__list
-        li.head__link.head__link_bold
-          a О нас
-        li.head__link
-          a Услуги
-          button.head__link_downBtn 
-        li.head__link
-          a Вакансии
-        li.head__link
-          a Новости
-        li.head__link
-          a Соглашения
-          button.head__link_downBtn 
-        li.head__link
-          +btnWithBorder('войти','btnWithBorder_head')
-        li.head__link
-          +btnForm('зарегистрироваться','btnForm_head')
+        +headItem('О нас','head__link_bold')
+        +headItem('Услуги','',true)
+        +headItem('Вакансии','')
+        +headItem('Новости','')
+        +headItem('Соглашения','',true)
+        if (name)
+          span.head__link.head__link_name=name         
+        else
+          li.head__link
+            +btnWithBorder('войти','btnWithBorder_head')
+          li.head__link
+            +btnForm('зарегистрироваться','btnForm_head') 
