--- a/src/uikit-page/headerAndFooter/headerAndFooter.pug
+++ b/src/uikit-page/headerAndFooter/headerAndFooter.pug
@@ -1,3 +1,5 @@
+include ../../components/head/head.pug
+
 doctype html
 html
   head
@@ -17,7 +19,6 @@ html
   body
     section.headerAndFooter
       div.headerAndFooter__item
-        include ../../components/head/head.pug
-        +head()
-    
-      
+        +head('')
+      div.headerAndFooter__item
+        +head('Юлий Цезарь')
