--- a/src/uikit-page/headerAndFooter/headerAndFooter.scss
+++ b/src/uikit-page/headerAndFooter/headerAndFooter.scss
@@ -1,9 +1,18 @@
-body {
-  background-color: #e5e5e5;
-}
 .headerAndFooter {
   padding: 140px 0px;
   background: url("../../img/main-logo.svg") no-repeat 30px 30px;
   max-width: 1440px;
   margin: 0px auto;
+  &__item{
+    margin-bottom: 40px;
+  }
+  &::before{
+    content: '';
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-color: #e5e5e5 ;
+    top: 0;
+    left: 0;  
+  }
 }
