--- a/src/components/inputForm/inputForm.scss
+++ b/src/components/inputForm/inputForm.scss
@@ -2,7 +2,6 @@
   border: 1px solid rgba(31, 32, 65, 0.25);
   border-radius: 4px;
   padding: 9px 0 10px 16px;
-  width: 320px;
   font-size: 13.5px;
   line-height: 24px;
   color: rgba(31, 32, 65, 0.75);
@@ -17,17 +16,18 @@
   &__email-btn{
     width: 44px;
     height: 44px;
-    background: url('../../img/arrow-forward.svg')no-repeat 0 0;
+    background: url('../../img/arrow-forward.svg')no-repeat 50%;
     position: absolute;
-    top: 13px;
-    right: 41px;
+    z-index: 3;
+    right: 0px;
   } 
 }
 .inputForm_email{
-  width: 267px;
+  width: 100%;
 }
 .inputFormEmail{
   position: relative;
+  width: 267px;
 }
 .inputForm_active{
   border: 1px solid rgba(31, 32, 65, 0.5);
