--- a/src/index/index.scss
+++ b/src/index/index.scss
@@ -1,105 +1,23 @@
-main {
-  margin: 0 auto;
-  width: 100%;
-  display: flex;
-  background: #fff;
-  flex-wrap: wrap;
-}
-
-.form-elements {
-  width: 100%;
-  margin: 50px 0 0 0;
-  display: flex;
-  z-index: 1;
-}
-
-.flex {
-  display: flex;
-  margin: 20px 0 0 0;
-
-  form {
-    margin: 10px;
+.background {
+  max-width: 1440px;
+  height: 830px;
+  margin: 0px auto;
+  padding: 70px 151px 20px 140px;
+  position: relative;
+  background: url('../img/backgrond/index.png')no-repeat;
+  &__text{
+    color: rgba(31, 32, 65, 0.75);
+    position: absolute;
+    right: 135px;
+    bottom: 24px;
   }
 }
 
-.flex-column {
-  display: flex;
-  flex-direction: column;
-  margin: auto 20px;
-
-  form {
-    margin: 10px;
+@media(max-width:532px){
+  .background {
+    padding: 70px 0px 20px 0px;
+    &__text{
+      right: 15px;
+    }
   }
-}
-
-.email {
-  h3 {
-    margin: 20px 0 0 20px;
-  }
-}
-
-.clickMe {
-  h3 {
-    margin: 20px;
-  }
-
-  .button {
-    margin: 20px;
-  }
-
-  .buttonFill {
-    padding: 14.8px 19px;
-    margin: 20px;
-  }
-
-  .buttonBorder {
-    padding: 11px 17px;
-  }
-
-}
-
-.linkPurple {
-  font-family: 'MontserratBold';
-  font-size: 12px;
-  line-height: 15px;
-  text-transform: uppercase;
-  color: #BC9CFF;
-}
-
-.linkPurple:hover,
-.linkPurple:active {
-  color: rgba(31, 32, 65, 0.5);
-}
-
-.cards {
-  width: 100%;
-}
-
-.search-body {
-  display: flex;
-  width: 100%;
-}
-
-.leftSide {
-  outline: 1px solid black;
-  width: 27.58%;
-  padding: 30px 0 0 0;
-
-  h3 {
-    margin: 0 0 5px 0;
-  }
-
-  .filter {
-    margin: 0 0 20px 0;
-  }
-
-  #dropdownGuest {
-    width: 266px;
-  }
-
-}
-
-.rightSide {
-  outline: 1px solid black;
-  width: 72.42%;
 }
