--- a/src/uikit-page/headerAndFooter/headerAndFooter.pug
+++ b/src/uikit-page/headerAndFooter/headerAndFooter.pug
@@ -1,4 +1,5 @@
 include ../../components/head/head.pug
+include ../../components/footer/footer.pug
 
 doctype html
 html
@@ -18,7 +19,10 @@ html
     meta(name="theme-color" content="#ffffff")
   body
     section.headerAndFooter
-      div.headerAndFooter__item
-        +head('')
-      div.headerAndFooter__item
-        +head('Юлий Цезарь')
+      div.headerAndFooter__wrap
+        div.headerAndFooter__item
+          +head('')
+        div.headerAndFooter__item
+          +head('Юлий Цезарь')
+        div.headerAndFooter__item
+          +footer()
