--- a/src/uikit-page/headerAndFooter/headerAndFooter.scss
+++ b/src/uikit-page/headerAndFooter/headerAndFooter.scss
@@ -1,18 +1,11 @@
 .headerAndFooter {
-  padding: 140px 0px;
-  background: url("../../img/main-logo.svg") no-repeat 30px 30px;
-  max-width: 1440px;
-  margin: 0px auto;
+  background-color: #e5e5e5;
+  &__wrap{
+    padding: 140px 0px;
+    background:#e5e5e5 url("../../img/main-logo.svg") no-repeat 30px 30px;
+  }
+
   &__item{
     margin-bottom: 40px;
-  }
-  &::before{
-    content: '';
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    background-color: #e5e5e5 ;
-    top: 0;
-    left: 0;  
   }
 }
