--- a/src/main.scss
+++ b/src/main.scss
@@ -28,6 +28,9 @@ dl,
 dd {
   margin: 0;
 }
+a { 
+  text-decoration: none; /* Отменяем подчеркивание у ссылки */
+ } 
 
 /* Выставляем основные настройки по-умолчанию для body */
 body {
