--- a/src/components/inputForm/inputForm.scss
+++ b/src/components/inputForm/inputForm.scss
@@ -5,6 +5,7 @@
   font-size: 13.5px;
   line-height: 24px;
   color: rgba(31, 32, 65, 0.75);
+  width: 100%;
   &::placeholder {
     color: rgba(31, 32, 65, 0.25);
     font-size: 14px;
