--- a/src/components/signIn/signIn.scss
+++ b/src/components/signIn/signIn.scss
@@ -4,6 +4,7 @@
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   padding: 40px 30px 20px 30px;
+  width: 380px;
   &__title {
     font-weight: bold;
     font-size: 24px;
