--- a/src/components/head/head.scss
+++ b/src/components/head/head.scss
@@ -1,24 +1,24 @@
 .head{
   max-width: 100%;
-
   background-color: #fff;
   &__item{
     display: flex;
     justify-content: flex-end;
-    padding: 17px 121px 18px 0px;
+    padding: 17px 121px 14px 140px;
     max-width: 1440px;
     margin: 0px auto;
-    background: url('../../img/Logo.svg') no-repeat 140px 15px;
     position: relative;
     z-index: 2;
+    justify-content: space-between;
   }
   &__item_name{
-    padding:25px 25px 18px 0px;
+    padding:15px 25px 16px 140px;
   }
   &__list{
     display: flex;
     align-items: center;
     flex-wrap: wrap;
+    margin-left: 0px;
   }
   
   &__link{
@@ -27,6 +27,9 @@
     position: relative;
     &:last-child{
       width: 196px;
+    }
+    &:nth-child(5){
+      margin-right: 22px;
     }
   }
   &__link_name{
