--- a/src/components/checkboxList/checkboxList.scss
+++ b/src/components/checkboxList/checkboxList.scss
@@ -27,6 +27,7 @@
     text-transform: uppercase;
     font-weight: bold;
     position: relative;
+    margin-bottom: 17px;
   }
   &__titleBtn_rotate{
     &::before{
