--- a/src/components/range-slider/range-slider.pug
+++ b/src/components/range-slider/range-slider.pug
@@ -1,5 +1,8 @@
-mixin range-slider(label)
-    .range-slider
-        label.range-slider__label(for="amount")= label
-        input.range-slider__input(type="text" disabled id="amount" readonly)
-        #slider-range
+mixin range-slider(label,text)
+  .range-slider
+    div.range-slider__item
+      label.range-slider__label(for="amount")= label
+      input.range-slider__input(type="text" disabled id="amount" readonly)
+    #slider-range
+    div.range-slider__text=text
+    
