--- a/src/uikit-page/formElements/formElements.pug
+++ b/src/uikit-page/formElements/formElements.pug
@@ -43,10 +43,8 @@ html
             include ../../components/data-dropdown/data-dropdown.pug
             +data-dropdown()
           div.formElements__row-input-item
-            div.formElements__row-input-text
-              span.formElements__row-input-title filter date dropdown
             include ../../components/data-dropdown/data-dropdown.pug
-            +data-dropdown-filter()
+            +data-dropdown-filter('filter date dropdown')
           div.formElements__row-input-item
             div.formElements__row-input-text
               span.formElements__row-input-title subscription text field
