--- a/src/components/richCheckboxBtn/richCheckboxBtn.pug
+++ b/src/components/richCheckboxBtn/richCheckboxBtn.pug
@@ -5,12 +5,9 @@ mixin richCheckboxBtnItem(subTitle,text)
       span.richCheckboxBtn__subTitle=subTitle
     div.richCheckboxBtn__text!=text
 
-mixin richCheckboxBtn(title,subTitle,text)
+mixin richCheckboxBtn(title)
   section.richCheckboxBtn=title
   div.div.richCheckboxBtn__wrapper
-    div.richCheckboxBtn__item
-      label.richCheckboxBtn__check
-        input(class='richCheckboxBtn__checkbox' type="checkbox")
-        span.richCheckboxBtn__subTitle=subTitle
-      div.richCheckboxBtn__text!=text 
+    div.richCheckboxBtn__item  
+    +richCheckboxBtnItem('Широкий коридор','Ширина коридоров в номере</br> не менее 91 см.') 
     +richCheckboxBtnItem('Помощник для инвалидов','На 1 этаже вас встретит специалист</br>  и проводит до номера.') 
