--- a/src/components/richCheckboxBtn/richCheckboxBtn.scss
+++ b/src/components/richCheckboxBtn/richCheckboxBtn.scss
@@ -4,13 +4,14 @@
   text-transform: uppercase;
   font-weight: bold;
   font-size: 12px;
-  &__wrapper{
+  &__wrapper {
     margin-top: 12px;
   }
   &__check {
     font-weight: bold;
     text-transform: none;
     font-size: 12px;
+    margin-bottom: 5px;
   }
 
   &__checkbox {
@@ -41,8 +42,15 @@
     font-size: 14px;
   }
   &__text {
+    margin-top: 5px;
     text-transform: none;
     margin-left: 30px;
     font-weight: normal;
+    font-size: 12px;
+    line-height: 14px;
+    color: rgba(31, 32, 65, 0.5);
+  }
+  &__item{
+    margin-bottom: 8px;
   }
 }
