--- a/src/components/roomSearch/roomSearch.pug
+++ b/src/components/roomSearch/roomSearch.pug
@@ -9,4 +9,4 @@ mixin roomSearch(title)
       +dropDown('','гости')
     div.roomSearch__item 
      include ../buttons/buttons.pug
-     +btnForm('подобрать номер')
+     +btnForm('подобрать номер','')
