--- a/src/components/buttons/buttons.pug
+++ b/src/components/buttons/buttons.pug
@@ -6,6 +6,6 @@ mixin btnJustName(name)
   button.btnJustName=name
 mixin btnForm(name,className,flag)
   if(flag)
-    a(class='btnForm '+className type='submit' href='registration.html')=name
+    a(class='btnForm '+className  href='registration.html')=name
   else 
-    button(class='btnForm '+className type='submit')=name
+    a(class='btnForm '+className href='searchRoom.html' )=name
