--- a/src/components/roomSearch/roomSearch.scss
+++ b/src/components/roomSearch/roomSearch.scss
@@ -5,7 +5,7 @@
   border: 1px solid rgba(0, 0, 0, 0.12);
   box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  padding: 40px 30px 29px 30px ;
+  padding: 40px 30px 40px 30px ;
   background-color: #fff;
   &__title {
     font-weight: bold;
@@ -18,7 +18,7 @@
       margin-bottom: 20px;
     }
     &:nth-child(3){
-      margin-bottom: 28px;
+      margin-bottom: 41px
     }
   }
 }
