--- a/src/components/dropDown/dropDown.scss
+++ b/src/components/dropDown/dropDown.scss
@@ -1,7 +1,7 @@
 .dropDown {
   display: flex;
   flex-direction: column;
-  
+  width: 100%;
   &__title {
     font-weight: bold;
     font-size: 12px;
