--- a/src/components/textList/textList.pug
+++ b/src/components/textList/textList.pug
@@ -7,3 +7,8 @@ mixin city()
   section.textList.textList_city
     div.textList__title Удобство
     div.textList__subtTitle Окно в каждой из спален
+
+mixin comfort()
+  section.textList.textList_comfort
+    div.textList__title Уют
+    div.textList__subtTitle Номер оснащен камином 
