--- a/src/components/textList/textList.scss
+++ b/src/components/textList/textList.scss
@@ -29,3 +29,7 @@
   background: url('../../img/location_city.svg')no-repeat 4px 0px;
   margin-top: 23px;
 }
+.textList_comfort {
+  background: url('../../img/whatshot.svg')no-repeat 4px 0px;
+  margin-top: 23px;
+}
