--- a/src/components/commentary/commentary.scss
+++ b/src/components/commentary/commentary.scss
@@ -22,7 +22,7 @@
   &__header-date {
   }
   &__body-text {
-    width: 653px;
+    max-width: 653px;
     margin-left: 19px;
     color: rgba(31, 32, 65, 0.75);
     font-size: 14px;
